fix: z-index issue

--- a/app/components/Header/header.module.scss
+++ b/app/components/Header/header.module.scss
@@ -8,7 +8,7 @@ $header-height: var(--header-height);
   width: 100%;
   max-width: 100vw;
   background-color: transparent;
-
+  z-index: 9999;
   height: $header-height;
   display: flex;
   padding: 0 8px;
@@ -228,9 +228,9 @@ $header-height: var(--header-height);
     text-align: center;
     font-size: 16px;
     font-weight: 400;
-    color: #0859d1;
+    text-shadow: 1px 1px 1px rgba(8, 89, 209, 0.075);
     text-decoration-line: none;
-    color: 0859d1ff;
+    color: rgb(8, 89, 209);
     line-height: 1.25;
     border: 1px solid #424242;
 
