--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -9,7 +9,6 @@
 }
 
 .content_container {
-  z-index: -1;
   flex-grow: 1;
   background-color: #fff;
   border-radius: 16px;
